--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -9,13 +9,16 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "input-otp": "^1.4.2",
+        "leaflet": "^1.9.4",
+        "leaflet-defaulticon-compatibility": "^0.1.2",
         "lucide-react": "^0.513.0",
         "next": "^15.3.3",
         "postcss": "^8.5.4",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^19.0.0-rc.1",
+        "react-dom": "^19.0.0-rc.1",
         "react-hook-form": "^7.57.0",
         "react-icons": "^5.5.0",
+        "react-leaflet": "^5.0.0-rc.2",
         "react-redux": "^9.2.0",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
@@ -28,6 +31,7 @@
         "lint": "next lint"
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.18",
         "@types/node": "22.15.29",
         "@types/react": "19.1.6",
         "eslint-config-next": "15.3.3",
