--- a/dulua-backend/requirements.txt
+++ b/dulua-backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
@@ -13,6 +14,7 @@ fastapi-cli==0.0.7
 filelock==3.18.0
 fonttools==4.58.1
 fsspec==2025.5.1
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -30,12 +32,16 @@ numpy==2.2.6
 opencv-python==4.11.0.86
 packaging==25.0
 pandas==2.2.3
+passlib==1.7.4
 pillow==11.2.1
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pyclean==3.1.0
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
+PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
@@ -49,6 +55,8 @@ scipy==1.15.3
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
 starlette==0.46.2
 sympy==1.14.0
 torch==2.7.0
