feat: login setup

--- a/dulua-frontend/tsconfig.json
+++ b/dulua-frontend/tsconfig.json
@@ -23,6 +23,9 @@
             ],
             "@app/*": [
                 "app/*"
+            ],
+            "@api/*": [
+                "api/*"
             ]
         },
         "skipLibCheck": true,
