--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -5,6 +5,7 @@
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@reduxjs/toolkit": "^2.8.2",
+        "@tabler/icons-react": "^3.34.1",
         "@tailwindcss/postcss": "^4.1.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -12,6 +13,7 @@
         "leaflet": "^1.9.4",
         "leaflet-defaulticon-compatibility": "^0.1.2",
         "lucide-react": "^0.513.0",
+        "motion": "^12.23.9",
         "next": "^15.3.3",
         "postcss": "^8.5.4",
         "react": "^19.0.0-rc.1",
