--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -12,6 +12,7 @@
         "input-otp": "^1.4.2",
         "leaflet": "^1.9.4",
         "leaflet-defaulticon-compatibility": "^0.1.2",
+        "leaflet-routing-machine": "^3.2.12",
         "lucide-react": "^0.513.0",
         "motion": "^12.23.9",
         "next": "^15.3.3",
