--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -9,6 +9,8 @@
         "@tailwindcss/postcss": "^4.1.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "form-data": "^4.0.4",
+        "formidable": "^3.5.4",
         "input-otp": "^1.4.2",
         "leaflet": "^1.9.4",
         "leaflet-defaulticon-compatibility": "^0.1.2",
