--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -25,6 +25,8 @@
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0-rc.2",
         "react-redux": "^9.2.0",
+        "react-slick": "^0.30.3",
+        "slick-carousel": "^1.8.1",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
         "zod": "^3.25.56"
