--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -24,8 +24,10 @@
         "react-hook-form": "^7.57.0",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0-rc.2",
+        "react-markdown": "^8.0.6",
         "react-redux": "^9.2.0",
         "react-slick": "^0.30.3",
+        "remark-gfm": "^4.0.1",
         "slick-carousel": "^1.8.1",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
