--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -12,12 +12,14 @@
         "form-data": "^4.0.4",
         "formidable": "^3.5.4",
         "input-otp": "^1.4.2",
+        "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
         "leaflet-defaulticon-compatibility": "^0.1.2",
         "leaflet-routing-machine": "^3.2.12",
         "lucide-react": "^0.513.0",
         "motion": "^12.23.9",
         "next": "^15.3.3",
+        "nookies": "^2.5.2",
         "postcss": "^8.5.4",
         "react": "^19.0.0-rc.1",
         "react-dom": "^19.0.0-rc.1",
