--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -19,6 +19,7 @@
         "lucide-react": "^0.513.0",
         "motion": "^12.23.9",
         "next": "^15.3.3",
+        "next-share": "^0.27.0",
         "nookies": "^2.5.2",
         "postcss": "^8.5.4",
         "react": "^19.0.0-rc.1",
