heatmap layer for trash

--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -16,6 +16,7 @@
         "leaflet": "^1.9.4",
         "leaflet-defaulticon-compatibility": "^0.1.2",
         "leaflet-routing-machine": "^3.2.12",
+        "leaflet.heat": "^0.2.0",
         "lucide-react": "^0.513.0",
         "motion": "^12.23.9",
         "next": "^15.3.3",
@@ -27,6 +28,7 @@
         "react-hook-form": "^7.57.0",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0-rc.2",
+        "react-leaflet-heatmap-layer": "^2.0.0",
         "react-markdown": "^8.0.6",
         "react-redux": "^9.2.0",
         "react-slick": "^0.30.3",
