--- a/dulua-frontend/package.json
+++ b/dulua-frontend/package.json
@@ -7,6 +7,7 @@
         "@reduxjs/toolkit": "^2.8.2",
         "@tabler/icons-react": "^3.34.1",
         "@tailwindcss/postcss": "^4.1.8",
+        "add": "^2.0.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "form-data": "^4.0.4",
@@ -26,6 +27,7 @@
         "react": "^19.0.0-rc.1",
         "react-dom": "^19.0.0-rc.1",
         "react-hook-form": "^7.57.0",
+        "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0-rc.2",
         "react-leaflet-heatmap-layer": "^2.0.0",
@@ -33,7 +35,9 @@
         "react-redux": "^9.2.0",
         "react-slick": "^0.30.3",
         "remark-gfm": "^4.0.1",
+        "shadcn": "^3.5.0",
         "slick-carousel": "^1.8.1",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
         "zod": "^3.25.56"
